--- a/arch/arm/configs/tegra_olympus_mrom_hv_defconfig
+++ b/arch/arm/configs/tegra_olympus_mrom_hv_defconfig
@@ -235,9 +235,9 @@ CONFIG_MACH_TEGRA_GENERIC=y
 CONFIG_MACH_HARMONY=y
 CONFIG_MACH_VENTANA=y
 CONFIG_TEGRA_ODM_KIT=y
-CONFIG_TEGRA_DEBUG_UART_NONE=y
+# CONFIG_TEGRA_DEBUG_UART_NONE=y
 # CONFIG_TEGRA_DEBUG_UARTA is not set
-# CONFIG_TEGRA_DEBUG_UARTB is not set
+CONFIG_TEGRA_DEBUG_UARTB=y
 # CONFIG_TEGRA_DEBUG_UARTC is not set
 # CONFIG_TEGRA_DEBUG_UARTD is not set
 # CONFIG_TEGRA_DEBUG_UARTE is not set
