--- a/arch/arm/configs/tegra_olympus_mrom_debug_defconfig
+++ b/arch/arm/configs/tegra_olympus_mrom_debug_defconfig
@@ -232,9 +232,9 @@ CONFIG_ARCH_TEGRA=y
 # NVIDIA Tegra options
 #
 CONFIG_ARCH_TEGRA_2x_SOC=y
-CONFIG_MACH_TEGRA_GENERIC=y
-CONFIG_MACH_HARMONY=y
-CONFIG_MACH_VENTANA=y
+# CONFIG_MACH_TEGRA_GENERIC=y
+# CONFIG_MACH_HARMONY=y
+# CONFIG_MACH_VENTANA=y
 CONFIG_TEGRA_ODM_KIT=y
 # CONFIG_TEGRA_DEBUG_UART_NONE is not set
 # CONFIG_TEGRA_DEBUG_UARTA is not set
