--- a/arch/arm/configs/tegra_ventana_android_defconfig
+++ b/arch/arm/configs/tegra_ventana_android_defconfig
@@ -210,6 +210,7 @@ CONFIG_ARCH_TEGRA_2x_SOC=y
 CONFIG_MACH_TEGRA_GENERIC=y
 CONFIG_MACH_HARMONY=y
 CONFIG_MACH_VENTANA=y
+CONFIG_MACH_MOT=y
 CONFIG_TEGRA_ODM_KIT=y
 CONFIG_TEGRA_DEBUG_UART_NONE=y
 # CONFIG_TEGRA_DEBUG_UARTA is not set
